web-infras/parser/tests/fixtures/babel/es2015/modules/export-default-variable-declaration2/output.txt
[SyntaxError]: unexpect keyword in strict mode (1,16)
1|export default let Foo = () => {
 |              ^
[SyntaxError]: Missing semicolon or line terminator. (1,20)
1|export default let Foo = () => {
 |                  ^
